// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Companies > \`create\` > should invoke \`call\` 1`] = `
[
  [
    "crm.company.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Companies > \`create\` > should work without optional params 1`] = `
[
  [
    "crm.company.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": undefined,
    },
  ],
]
`;

exports[`Companies > \`get\` > should invoke \`call\` 1`] = `
[
  [
    "crm.company.get",
    {
      "id": "77",
    },
  ],
]
`;

exports[`Companies > \`list\` > should invoke \`list\` 1`] = `
[
  [
    "crm.company.list",
    {
      "filter": {
        ">PROBABILITY": 50,
      },
      "order": {
        "COMMENTS": "ASC",
      },
      "select": [
        "*",
        "UF_*",
      ],
      "start": 0,
    },
  ],
]
`;

exports[`Companies > \`list\` > should work without optional params 1`] = `
[
  [
    "crm.company.list",
    {},
  ],
]
`;

exports[`Companies > \`update\` > should invoke \`call\` 1`] = `
[
  [
    "crm.company.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Companies > \`update\` > should work without optional params 1`] = `
[
  [
    "crm.company.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": undefined,
    },
  ],
]
`;

exports[`Companies > should expose API methods 1`] = `
{
  "create": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
